add readme on others privacy issue

--- a/others/家族史作业.md
+++ b/others/家族史作业.md
@@ -1,6 +1,6 @@
 我的家族史
 
-以下内容完全是网上抄来的，除了姓氏是真的，其余信息全是假的。谁都可以抄。
+以下内容完全是网上抄来的，除了姓氏是真的，其余信息全是假的。因此无需privacy授权即可传播。
 
 刘姓是中文姓氏之一，2013年有人口近7000万，占中国全国人口的5.34%，在王、李、张之后排第四位。根据中国户籍管理部门的全国公民身份信息系统（NCIIS），刘是第四大姓。历史上，刘姓建立了汉朝、后汉、南汉等政权。最早一支刘姓源自尧的后裔刘累，故刘累为刘姓得姓始祖。刘姓望出江苏彭城。刘（류、유）姓在韩国亦有分布，在当地排名第32位，有约22万人。
 帝尧后裔祁姓刘氏。尧的后裔刘累为孔甲养龙，后来有一条龙病死，刘累携家眷逃亡鲁阳（今河南鲁山县），这是刘姓的起源（另一说法认为刘累故地在河南偃师）。刘知几考证刘氏不是尧的后裔，而是陆终的苗裔。周成王曾封曾祖父王季后人于刘（河南偃师），后失考。周定王八年（公元前592年）又封刘邑与王弟季子，王季子即刘康公，建立了刘国。刘邦感念项伯当年在鸿门宴时的解救之恩，赐予项伯刘姓。娄敬，力陈定都长安，获赐姓刘，拜为郎中，号奉春君。娄敬建议与匈奴和亲，并且徙六国后裔和强宗豪族十余万人至关中，成为汉初之基本国策。西汉初年，汉朝派遣宗室女与匈奴王室联姻，匈奴贵族之后多改刘姓。
