avoid potential Crimes against humanity

--- a/others/家族史作业.md
+++ b/others/家族史作业.md
@@ -9,5 +9,5 @@
 20世纪80年代，我的父母在二姑的介绍下相识，并结为夫妻，由于当时家里并不富裕，夫妻二人只能借住在我外公家里，但还是依然努力地生活着。
 后来，我出生了，我出生在这个富裕的时期，不得不说是我的幸运啊。随着中国的国际地位不断提高，经济的不断发展，我家向小康社会迈出了重要的一步，也把我送到了城市里读书。
 21世纪，我终于可以充分享受科技革命的第三次成果。如果你不知道电脑是什么，那我就正式宣布你out了。
-2002年，我家有了第一部手机。截至目前，人人都有智能手机。2007，我家从小平房搬到了楼房里，再也不用担心下雨了，原来房子要下雨时就出现屋外大雨，屋里小雨的景象。2010年，我家有了第一台电脑。电脑安装了之后，爸爸妈妈让我给他们一个人申请一个QQ账号，现在QQ级别比我高。想想毛爷爷多么伟大，怎么牛，都没体验过电子计算机。他为我们现在的好生活打下了坚实的基础。
+2002年，我家有了第一部手机。截至目前，人人都有智能手机。2007，我家从小平房搬到了楼房里，再也不用担心下雨了，原来房子要下雨时就出现屋外大雨，屋里小雨的景象。2010年，我家有了第一台电脑。电脑安装了之后，爸爸妈妈让我给他们一个人申请一个QQ账号，现在QQ级别比我高。想想邓小平多么伟大，怎么牛，都没体验过电子计算机。他为我们现在的好生活打下了坚实的基础。
 今天，能够把历史搬出来，不仅是为了完成作业，更重要的是让我重温了家里巨大的变化，和祖辈们刻苦的经历。我们每个小家庭的历史组合在一起便是整个中国的近代史。今天是历史，历史是今天，所以我们要认真对待每一天。
